# src/BackEnd/Api/app/Http/Controllers/Admin/UserController.php
@@ -4,12 +4,19 @@ namespace App\Http\Controllers\Admin;
 
 use App\Http\Controllers\Controller;
 use App\Models\User;
+use App\Repositories\UserRepository;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Validator;
+use Illuminate\Validation\Rule;
 
 class UserController extends Controller
 {
+    protected $userRepository;
 
+    public function __construct(UserRepository $_userRepository)
+    {
+        $this->userRepository = $_userRepository;
+    }
     /**
      * @OA\Post(
      *     path="/api/admin/user/list",
@@ -78,10 +85,10 @@ class UserController extends Controller
      *     )
      * )
      */
-    public function userList(Request $request)
+    public function GetList(Request $request)
     {
         $rules = [
-            'storeId' => ['integer'],
+            'storeId' => ['uuid'],
             'post' => ['string'],
             'gender' => ['string'],
             'searchKey' => ['string'],
@@ -98,25 +105,10 @@ class UserController extends Controller
             ));
         } else {
             $data = $request->all();
-            $takeNum = isset($data['pageSize']) ? $data['pageSize'] : 10;
-            $page = isset($data['page']) ? $data['page'] : 1;
+            $takeNum = isset($data->pageSize) ? $data->pageSize : 10;
+            $page = isset($data->page) ? $data->page : 1;
             $skipNum = ($page - 1) * $takeNum;
-            $users = User::where('state', 0)->where('type', 'in', [2, 3])->orderBy('created_at');
-            if (isset($data['searchKey'])) {
-                $users = $users->where(function ($query) {
-                    $query->where('name', 'like', '%' . $data['searchKey'] . '%')
-                        ->orWhere('phone', 'like', '%' . $data['searchKey'] . '%');
-                });
-            }
-            if (isset($data['storeId'])) {
-                $users = $users->where('storeId', $data['storeId']);
-            }
-            if (isset($data['post'])) {
-                $users = $users->where('post', $data['post']);
-            }
-            if (isset($data['gender'])) {
-                $users = $users->where('gender', $data['gender']);
-            }
+            $users = $this->userRepository->GetList((object) $data);
             $total = $users->count();
             $list = $users->skip($skipNum)->take($takeNum)->get();
             $pageTotal = $total / $takeNum;
@@ -150,8 +142,9 @@ class UserController extends Controller
      *           @OA\Property(description="头像", property="avatar", type="string", default="dd"),
      *           @OA\Property(description="性别", property="gender", type="string", default="dd"),
      *           @OA\Property(description="年龄", property="age", type="string", default="dd"),
-     *           @OA\Property(description="职位", property="post", type="string", default="dd"),
-     *           @OA\Property(description="头衔", property="title", type="string", default="dd"),
+     *           @OA\Property(description="职位编号", property="postId", type="string", default="dd"),
+     *           @OA\Property(description="头衔编号", property="titleIds", type="string", default="dd"),
+     *           @OA\Property(description="是否技师", property="isWorker", type="number", default="dd"),
      *           required={"name","avatar","gender","age","post","phone"})
      *       )
      *     ),
@@ -201,12 +194,13 @@ class UserController extends Controller
     {
         $rules = [
             'name' => ['required', 'string'],
-            'phone' => ['required', 'string', Rule::unique('users')->ignore($request->name, 'phone')],
+            'phone' => ['required', 'string', Rule::unique('users')->ignore($request->userId, 'id')],
             'avatar' => ['required', 'string'],
             'gender' => ['required', 'string'],
             'age' => ['required', 'string'],
-            'post' => ['required', 'string'],
-            'title' => ['string'],
+            'postId' => ['required', 'string'],
+            'titleIds' => ['nullable', 'array'],
+            'isWorker' => ['nullable', Rule::in(['0', '1'])],
         ];
         $messages = [
             'name.required' => '请输入用户名称!',
@@ -215,7 +209,7 @@ class UserController extends Controller
             'avatar.required' => '请输入头像!',
             'gender.required' => '请输入性别!',
             'age.required' => '请输入年龄!',
-            'post.required' => '请输入职位!',
+            'postId.required' => '请输入职位!',
         ];
         $validator = Validator::make($request->all(), $rules, $messages);
         if ($validator->fails()) {
@@ -225,45 +219,10 @@ class UserController extends Controller
                 'data' => $validator->errors(),
             ));
         }
-        $user = User::find($request->userId);
-        if (!$user) {
-            User::create([
-                'name' => $request->name,
-                'phone' => $request->phone,
-                'avatar' => $request->avatar,
-                'gender' => $request->gender,
-                'age' => $request->age,
-                'post' => $request->post,
-                'title' => is_null($request->title) || empty($request->title) ? '' : $request->title,
-                'type' => 3,
-                'state' => 0,
-            ]);
-            return json_encode(
-                array(
-                    'status' => 200,
-                    'msg' => '添加信息成功!',
-                    'data' => '',
-                )
-            );
-        } else {
-            $user->name = $request->name;
-            $user->phone = $request->phone;
-            $user->avatar = $request->avatar;
-            $user->gender = $request->gender;
-            $user->age = $request->age;
-            $user->post = $request->post;
-            $user->title = is_null($request->title) || empty($request->title) ? '' : $request->title;
-            $user->save();
-            return json_encode(
-                array(
-                    'status' => 200,
-                    'msg' => '修改信息成功!',
-                    'data' => '')
-            );
-        }
+        return json_encode($this->userRepository->AddOrUpdate((object) $request->all()));
     }
 
-     /**
+    /**
      * @OA\Post(
      *     path="/api/admin/user/remove",
      *     tags={"总台管理系统-用户管理"},
@@ -316,24 +275,8 @@ class UserController extends Controller
      *       ),
      * )
      */
-    public function remove(Request $request)
+    public function Remove(Request $request)
     {
-        $user = User::where('id', $request->userId)->first();
-        if ($user) {
-            $user->state = 1;
-            $user->save();
-            return json_encode(
-                array(
-                    'status' => 200,
-                    'msg' => '删除成功!',
-                    'data' => '')
-            );
-        }
-        return json_encode(
-            array(
-                'status' => 500,
-                'msg' => '删除失败,找不到该门店!',
-                'data' => '')
-        );
+        return json_encode($this->userRepository->Remove($request->userId));
     }
 }
