# src/BackEnd/Api/app/Models/User.php
@@ -5,12 +5,15 @@ namespace App\Models;
 use Illuminate\Notifications\Notifiable;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Laravel\Sanctum\HasApiTokens;
+use Illuminate\Database\Eloquent\SoftDeletes;
 
 class User extends Authenticatable
 {
     use HasApiTokens,Notifiable;
-   
+    use SoftDeletes;
+    use \App\Http\Traits\UseUuid;
+    protected $primaryKey = 'id';
     protected $fillable = [
-        'name', 'phone', 'avatar','gender','age','title','post','type','storeId','storeName','state'
+        'id','name', 'phone', 'avatar','gender','age','title','postId','post','type','storeId','storeName','state'
     ];  
 }
